feature: render image and home and provide permalink

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,18 @@
         </ul>
       </div>
     </div>
+    <div class="separator"></div>
+    <div class="result hidden">
+      <img />
+      <form class="pure-form pure-form-aligned">
+        <fieldset>
+          <div class="pure-control-group">
+            <label for="permalink">Permalink:</label>
+            <input type="text" name="permalink" placeholder="" />
+          </div>
+        </fieldset>
+      </form>
+    </div>
     <div class="container">
       <form id="googlify" class="pure-form pure-form-aligned" action="googlify" method='GET'>
         <fieldset>
