--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       <form class="pure-form pure-form-aligned">
         <fieldset>
           <div class="pure-control-group">
-            <label for="permalink">Permalink:</label>
+            <label for="permalink">Get permalink:</label>
             <input type="text" name="permalink" placeholder="" />
           </div>
         </fieldset>
