--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link media="all" type="text/css" rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-nr-min.css" />
     <link media="all" type="text/css" rel="stylesheet" href="/stylesheets/googlify.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="/javascripts/jquery.urldecoder.min.js"></script>
     <script src="/javascripts/googlify.js"></script>
   </head>
   <body>
