--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link media="all" type="text/css" rel="stylesheet" href="/stylesheets/googlify.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="/javascripts/jquery.urldecoder.min.js"></script>
+    <script src="/javascripts/spin.js"></script>
+    <script src="/javascripts/jquery.spin.js"></script>
     <script src="/javascripts/googlify.js"></script>
   </head>
   <body>
@@ -33,6 +35,7 @@
         </fieldset>
       </form>
     </div>
+    <div class="spinner-container"></div>
     <div class="container">
       <form id="googlify" class="pure-form pure-form-aligned" action="googlify" method='GET'>
         <fieldset>
