--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Googly Eyes!</title>
     <link rel="shortcut icon" href="/images/favicon.ico" />
-    <link media="all" type="text/css" rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-nr-min.css" />
+    <link media="all" type="text/css" rel="stylesheet" href="//yui.yahooapis.com/pure/0.4.1/pure-min.css" />
     <link media="all" type="text/css" rel="stylesheet" href="/stylesheets/googlify.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="/javascripts/jquery.urldecoder.min.js"></script>
@@ -14,50 +14,57 @@
   <body>
     <div class="header">
       <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
-        <img src="/images/logo.png"></img>
-        <a class="pure-menu-heading" href="">Put googly eyes on things!</a>
-        <p>Disclaimer: This website was tested on animals. It does not work.</p>
+        <img src="/images/logo.png" class="pure-hidden-phone" />
+        <a class="pure-menu-heading desktop" href="">Put googly eyes on things!</a>
+        <a class="pure-menu-heading mobile" href="">Googlify things!</a>
         <ul>
           <li><a href="http://twitter.com/elhu">Twitter</a></li>
           <li><a href="http://github.com/elhu/googly_eyes">Github</a></li>
         </ul>
+        <p>Disclaimer: This website was tested on animals. It does not work.</p>
       </div>
     </div>
     <div class="separator"></div>
-    <div class="result hidden">
-      <img />
-      <form class="pure-form pure-form-aligned">
-        <fieldset>
-          <div class="pure-control-group">
-            <label for="permalink">Get permalink:</label>
-            <input type="text" name="permalink" placeholder="" />
-          </div>
-        </fieldset>
-      </form>
-    </div>
-    <div class="spinner-container"></div>
-    <div class="container">
-      <form id="googlify" class="pure-form pure-form-aligned" action="googlify" method='GET'>
-        <fieldset>
-          <legend>Help me put googly eyes on something!</legend>
+    <div class="pure-g-r">
+      <div class="pure-u-1-5"></div>
+      <div class="pure-u-3-5 result hidden">
+        <img src="#" />
+        <form class="pure-form pure-form-aligned">
+          <fieldset>
+            <div class="pure-control-group">
+              <label for="permalink">Get permalink:</label>
+              <input type="text" name="permalink" placeholder="" />
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <div class="pure-u-1-5"></div>
+      <div class="spinner-container pure-u-1-1"></div>
+      <div class="container pure-u-1-3"></div>
+      <div class="container pure-u-1-3">
+        <form id="googlify" class="pure-form pure-form-aligned" action="googlify" method='GET'>
+          <fieldset>
+            <legend>Help me put googly eyes on something!</legend>
 
-          <div class="pure-control-group">
-            <label for="url">First, pick an image</label>
-            <input type="text" name="url" placeholder="url" />
-          </div>
+            <div class="pure-control-group">
+              <label for="url">First, pick an image</label>
+              <input type="text" name="url" placeholder="url" />
+            </div>
 
-          <div class="pure-control-group">
-            <label for="style">Then, pick a style</label>
-            <select name="style"></select>
-          </div>
+            <div class="pure-control-group">
+              <label for="style">Then, pick a style</label>
+              <select name="style"></select>
+            </div>
 
-          <div class="pure-controls">
-            <button type="submit" class="pure-button pure-button-primary">
-              Googlify!
-            </button>
-          </div>
-        </fieldset>
-      </form>
+            <div class="pure-controls">
+              <button type="submit" class="pure-button pure-button-primary">
+                Googlify!
+              </button>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <div class="container pure-u-1-3"></div>
     </div>
   </body>
 </html>
