better mobile detection

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
           <li><a href="http://twitter.com/elhu">Twitter</a></li>
           <li><a href="http://github.com/elhu/googly_eyes">Github</a></li>
         </ul>
-        <p>Disclaimer: This website was tested on animals. It does not work.</p>
+        <p class="desktop">Disclaimer: This website was tested on animals. It does not work.</p>
       </div>
     </div>
     <div class="separator"></div>
