fix: Hide copy button in mobile layout

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             <div class="pure-control-group">
               <label for="permalink">Get permalink:</label>
               <input id="permalink" type="text" name="permalink" placeholder="" />
-              <button id="copy-permalink" data-clipboard-target="permalink" class="pure-button">Copy</button>
+              <button id="copy-permalink" data-clipboard-target="permalink" class="pure-button desktop">Copy</button>
             </div>
           </fieldset>
         </form>
