--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,7 @@
     <link rel="shortcut icon" href="/images/favicon.ico" />
     <link media="all" type="text/css" rel="stylesheet" href="//yui.yahooapis.com/pure/0.4.1/pure-min.css" />
     <link media="all" type="text/css" rel="stylesheet" href="/stylesheets/googlify.css" />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="/javascripts/jquery.urldecoder.min.js"></script>
-    <script src="/javascripts/spin.js"></script>
-    <script src="/javascripts/jquery.spin.js"></script>
-    <script src="/javascripts/ZeroClipboard.min.js"></script>
-    <script src="/javascripts/googlify.js"></script>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
   </head>
   <body>
     <div class="header">
@@ -19,8 +14,8 @@
         <a class="pure-menu-heading desktop" href="">Put googly eyes on things!</a>
         <a class="pure-menu-heading mobile" href="">Googlify things!</a>
         <ul>
-          <li><a href="http://twitter.com/elhu">Twitter</a></li>
-          <li><a href="http://github.com/elhu/googly_eyes">Github</a></li>
+          <li><a href="http://twitter.com/elhu"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="http://github.com/elhu/googly_eyes"><i class="fa fa-github"></i></a></li>
         </ul>
         <p class="desktop">Disclaimer: This website was tested on animals. It does not work.</p>
       </div>
@@ -34,8 +29,10 @@
           <fieldset>
             <div class="pure-control-group">
               <label for="permalink">Get permalink:</label>
-              <input id="permalink" type="text" name="permalink" placeholder="" />
-              <button id="copy-permalink" data-clipboard-target="permalink" class="pure-button desktop">Copy</button>
+              <input id="permalink" type="text" name="permalink" placeholder="" readonly />
+              <button id="copy-permalink" data-clipboard-target="permalink" class="pure-button desktop">
+                <i class="fa fa-clipboard"></i>
+              </button>
             </div>
           </fieldset>
         </form>
@@ -68,5 +65,11 @@
       </div>
       <div class="container pure-u-1-3"></div>
     </div>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="/javascripts/jquery.urldecoder.min.js"></script>
+    <script src="/javascripts/spin.js"></script>
+    <script src="/javascripts/jquery.spin.js"></script>
+    <script src="/javascripts/ZeroClipboard.min.js"></script>
+    <script src="/javascripts/googlify.js"></script>
   </body>
 </html>
